[package]
name = "nula-relay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Single-relay NIP-01 state machine: lifecycle, reconnect, subscriptions, publish ACK, optional NIP-42 AUTH."
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Default ships the relay over `nula-net`'s default tokio-tungstenite
# transport. Disable defaults if you supply your own
# `WebSocketTransport` (e.g. wasm or mock) — the crate still works,
# you just have to construct it via the builder.
default = ["default-transport", "nip42"]

# Re-export of `nula-net/default-transport`. Keeps consumers from
# having to enable the same flag on two crates.
default-transport = ["nula-net/default-transport"]

# NIP-42 AUTH challenge handler. The trait surface compiles without
# this feature; turning it on enables the handler hook plus its
# convenience signer integration.
nip42 = []

# Tracing spans on every state transition / inbound dispatch.
tracing = ["dep:tracing", "nula-net/tracing"]

[dependencies]
nula-core = { workspace = true }
nula-net  = { workspace = true }

futures.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# Tokio runtime — every realistic deployment is on Tokio (see ADR-0003).
tokio = { workspace = true, features = ["sync", "rt", "macros", "time"] }

# Random number generation for backoff jitter. The `std` feature
# pulls `getrandom` against the OS entropy source.
getrandom.workspace = true

# Optional observability.
tracing = { workspace = true, optional = true }

[dev-dependencies]
nula-core = { workspace = true, features = ["nip06"] }
nula-net  = { workspace = true, features = ["mock"] }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "time",
    "test-util",
] }
serde_json.workspace = true

[lints]
workspace = true

[[test]]
name = "lifecycle"
path = "tests/lifecycle.rs"

[[test]]
name = "subscribe"
path = "tests/subscribe.rs"

[[test]]
name = "publish"
path = "tests/publish.rs"

[[test]]
name = "nip42"
path = "tests/nip42.rs"
required-features = ["nip42"]
