[package]
name = "nula-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Layer-5 Nostr SDK facade: Client + ClientBuilder composing nula-core, nula-relay, nula-gossip, nula-sync."
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Defaults compose the most commonly-needed Layer-5 capabilities:
# NIP-65 outbox routing, NIP-77 reconciliation, an in-memory database
# fallback, and a tokio-tungstenite WebSocket transport (via
# `nula-relay-pool`'s `default-transport`).
default = ["gossip", "sync", "memory-fallback", "default-transport"]

# Layer-4 add-ons
gossip            = ["dep:nula-gossip"]
sync              = ["dep:nula-sync", "nula-sync/storage"]
nip46             = ["dep:nula-signer"]
default-transport = ["nula-relay/default-transport"]
# SOCKS5 / Tor proxy dialing for every relay the client spawns (including
# gossip-discovered ones). Set the proxy via
# `ClientBuilder::relay_options(RelayOptions::new().connection_mode(...))`.
socks             = ["nula-relay/socks"]
# Enable `nula-storage`'s in-memory backend so `ClientBuilder::build`
# can default to `MemoryDatabase::new()` when the caller skipped
# `.database(...)`. Turn this off to enforce explicit database
# configuration.
memory-fallback   = ["nula-storage/memory"]

# Tracing spans on every public Client method. Field names follow
# ADR-0005.
tracing = ["dep:tracing"]

[dependencies]
# `nip17` transitively enables `nip44` + `nip59`; the
# `nips::nip17` / `nips::nip65` facades reference these wire-level
# helpers unconditionally, so the dependency must be explicit
# rather than relying on workspace-wide feature unification.
nula-core            = { workspace = true, features = ["nip17"] }
nula-relay           = { workspace = true, features = ["pool"] }
nula-storage         = { workspace = true }

# Optional Layer-4 dependencies, gated.
nula-gossip          = { workspace = true, optional = true }
nula-signer          = { workspace = true, optional = true }
nula-sync            = { workspace = true, optional = true }

futures.workspace    = true
thiserror.workspace  = true
tokio = { workspace = true, features = ["sync", "rt", "time"] }
tokio-stream.workspace = true

# Optional observability.
tracing = { workspace = true, optional = true }

[dev-dependencies]
nula-core               = { workspace = true, features = ["nip06"] }
nula-relay              = { workspace = true, features = ["pool", "server", "mock", "default-transport"] }
nula-storage            = { workspace = true, features = ["memory"] }
nula-sync               = { workspace = true, features = ["storage"] }
# `net` + `io-util` back the in-test minimal SOCKS5 proxy used by
# `tests/socks5_routing.rs`.
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "test-util",
    "time",
    "net",
    "io-util",
] }

[lints]
workspace = true

# Gated behind `socks` so the default integration suite stays free of the
# proxy dependency; run with `--features socks`.
[[test]]
name = "socks5_routing"
path = "tests/socks5_routing.rs"
required-features = ["socks"]
