[package]
name = "nula-signer-connect"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "NIP-46 (Nostr Connect) remote signer client built on top of `nula-relay-pool`. Implements `nula_core::NostrSigner`."
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# `nip04` enables the legacy NIP-04 RPC bridges (still required by
# many existing bunkers). NIP-44 is always on because it ships the
# wire-payload encryption itself.
default = ["nip04"]
nip04 = ["nula-core/nip04"]
# Re-export of `nula-relay-pool/default-transport` so the embedded
# pool ships a working tokio-tungstenite client.
default-transport = ["nula-relay-pool/default-transport"]
tracing = ["dep:tracing", "nula-relay-pool/tracing"]

[dependencies]
nula-core       = { workspace = true, features = ["nip44", "nip46"] }
nula-net        = { workspace = true }
nula-relay      = { workspace = true }
nula-relay-pool = { workspace = true }
nula-storage    = { workspace = true }

futures.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true

# Tokio: Mutex for the pending map, oneshot for per-RPC reply
# channels, spawn for the dispatcher actor, time for per-call timeouts.
tokio = { workspace = true, features = ["sync", "rt", "macros", "time"] }

# RNG for the JSON-RPC `id` field. Pulled directly so we do not
# depend on the higher-level `rand` crate.
getrandom.workspace = true

tracing = { workspace = true, optional = true }

[dev-dependencies]
nula-core           = { workspace = true, features = ["nip06", "nip44", "nip04"] }
nula-net            = { workspace = true, features = ["mock"] }
nula-relay-builder  = { workspace = true, features = ["memory"] }
nula-relay-pool     = { workspace = true, features = ["default-transport"] }
nula-storage-memory = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "time",
    "test-util",
] }
serde_json.workspace = true

[lints]
workspace = true
