[package]
name = "nula-signer-connect"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "NIP-46 (Nostr Connect) remote signer client built on top of `nula-relay-pool`. Implements `nula_core::NostrSigner`."
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# `nip04` enables the legacy NIP-04 RPC bridges (still required by
# many existing bunkers). NIP-44 is always on because it ships the
# wire-payload encryption itself.
default = ["nip04"]
nip04 = ["nula-core/nip04"]
# Ship a working tokio-tungstenite client for the embedded pool.
default-transport = ["nula-relay/default-transport"]
tracing = ["dep:tracing", "nula-relay/tracing"]

[dependencies]
nula-core       = { workspace = true, features = ["nip44", "nip46"] }
nula-relay      = { workspace = true, features = ["pool"] }
nula-storage    = { workspace = true }

futures.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true

# Tokio: Mutex for the pending map, oneshot for per-RPC reply
# channels, spawn for the dispatcher actor, time for per-call timeouts.
tokio = { workspace = true, features = ["sync", "rt", "macros", "time"] }

# RNG for the JSON-RPC `id` field. Pulled directly so we do not
# depend on the higher-level `rand` crate.
getrandom.workspace = true

tracing = { workspace = true, optional = true }

[dev-dependencies]
nula-core           = { workspace = true, features = ["nip06", "nip44", "nip04"] }
nula-relay          = { workspace = true, features = ["pool", "server", "mock", "default-transport"] }
nula-storage        = { workspace = true, features = ["memory"] }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "time",
    "test-util",
] }
serde_json.workspace = true

[lints]
workspace = true
