[package]
name = "nula-storage-lmdb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "LMDB-backed Nostr event store backend implementing `nula_storage::NostrDatabase`."
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Tracing spans on save / query hot paths. Off by default so callers that
# do not integrate a subscriber pay zero overhead.
tracing = ["dep:tracing"]

[dependencies]
nula-core    = { workspace = true }
nula-net     = { workspace = true }
nula-storage = { workspace = true }

# LMDB engine.
flume.workspace    = true
postcard.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "rt"] }

# Feature-gated observability.
tracing = { workspace = true, optional = true }

[target.'cfg(not(any(target_os = "macos", target_os = "ios")))'.dependencies]
heed = { workspace = true }

# macOS / iOS need POSIX semaphores under the App Sandbox.
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
heed = { workspace = true, features = ["posix-sem"] }

[dev-dependencies]
nula-core               = { workspace = true, features = ["nip06"] }
nula-storage-test-suite = { workspace = true }
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[lints]
workspace = true
