[package]
name = "nula-storage-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "In-memory Nostr event store backend implementing `nula_storage::NostrDatabase`."
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
nula-core    = { workspace = true }
nula-net     = { workspace = true }
nula-storage = { workspace = true }

[dev-dependencies]
nula-core = { workspace = true, features = ["nip06"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util", "time"] }

[lints]
workspace = true
