[package]
name = "nula-storage-sqlite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "SQLite-backed Nostr event store backend implementing `nula_storage::NostrDatabase`."
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Default-on: vendor SQLite via `rusqlite`'s `bundled` feature so the
# crate works out of the box on every supported target. Turn off when
# linking against a system SQLite is desired.
default = ["bundled"]
bundled = ["rusqlite/bundled"]
# Tracing spans on save / query hot paths.
tracing = ["dep:tracing"]

[dependencies]
nula-core           = { workspace = true }
nula-net            = { workspace = true }
nula-storage        = { workspace = true }
nula-storage-memory = { workspace = true }

postcard            = { workspace = true }
rusqlite            = { workspace = true }
thiserror           = { workspace = true }
tokio               = { workspace = true, features = ["sync", "rt-multi-thread"] }

# Feature-gated observability.
tracing             = { workspace = true, optional = true }

[dev-dependencies]
nula-core               = { workspace = true, features = ["nip06"] }
nula-storage-test-suite = { workspace = true }
tempfile.workspace      = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[lints]
workspace = true
