[package]
name = "nula-storage-test-suite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Reusable conformance suite for `nula_storage::NostrDatabase` backends."
readme = "README.md"
# Test-only crate: never goes to crates.io.
publish = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
nula-core    = { workspace = true, features = ["nip06"] }
nula-storage = { workspace = true }

tokio = { workspace = true, features = ["macros", "rt", "sync"] }

[lints]
workspace = true
