[package]
name = "nula-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Nostr event-store trait surface: NIP-09 / NIP-40 / replaceable-kind semantics with pluggable backends."
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Default to the lightweight, pure-Rust in-memory backend so
# `nula-storage = "0.1"` is immediately usable with zero C deps.
default = ["memory"]

# In-memory backend (`memory` module). Pure Rust, no extra deps.
memory = []

# redb persistent backend (`redb` module): pure-Rust, ACID, copy-on-
# write B-tree store encoded with `postcard`.
redb = ["dep:redb", "dep:postcard", "dep:tokio"]

# Reusable conformance suite (`test_suite` module) for backend authors.
test-suite = ["dep:tokio"]

# Tracing spans on backend hot paths (no call sites yet).
tracing = ["dep:tracing"]

[dependencies]
nula-core = { workspace = true }

bitflags  = "2.6"
thiserror.workspace = true

# Backend dependencies (feature-gated).
redb     = { workspace = true, optional = true }
postcard = { workspace = true, optional = true }
tokio    = { workspace = true, optional = true, features = ["rt"] }
tracing  = { workspace = true, optional = true }

[dev-dependencies]
nula-core = { workspace = true, features = ["nip06"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util", "time"] }

[lints]
workspace = true

[[test]]
name = "memory_suite"
required-features = ["memory", "test-suite"]

[[test]]
name = "memory_capacity"
required-features = ["memory"]

[[test]]
name = "redb_suite"
required-features = ["redb", "test-suite"]

[[test]]
name = "redb_persistence"
required-features = ["redb"]
