[package]
name = "nula-sync"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "NIP-77 Negentropy reconciliation sessions and storage adapters for the nula stack."
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
# Convenience: pull in a `NostrDatabase`-backed adapter that turns
# database items into a sealed negentropy storage. Behind a feature
# so embedded / browser builds without a `NostrDatabase` can still
# use the bare session API.
storage = ["dep:nula-storage"]
# Tracing spans on every reconciliation step. Field names follow
# ADR-0005.
tracing = ["dep:tracing"]

[dependencies]
nula-core    = { workspace = true }
nula-storage = { workspace = true, optional = true }

negentropy.workspace = true
thiserror.workspace = true

# Optional observability.
tracing = { workspace = true, optional = true }

[dev-dependencies]
nula-core           = { workspace = true, features = ["nip06"] }
nula-storage        = { workspace = true, features = ["memory"] }
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
